[gd_scene load_steps=2 format=3 uid="uid://apartment_pause"]

[ext_resource type="Script" path="res://scripts/ui/apartment_pause_menu.gd" id="1_pause"]

[node name="ApartmentPauseMenu" type="CanvasLayer"]
layer = 10
process_mode = 3
script = ExtResource("1_pause")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 18
text = "Save Game"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Quit to Title"
